Sat May 29 15:25:22 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/RepositoryManager_Impl.h:
        * DnC/RepositoryManager/RepositoryManager_Impl.cpp:
        * DnC/RepositoryManager/RepositoryManager.mpc:

          First cut implementation of Repository Manager.

Fri May 28 23:17:44 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/NodeManager/NodeDaemon.idl:
        * DnC/NodeManager/NodeDaemon.mpc:
        * DnC/NodeManager/Node_Daemon.cpp:
        * DnC/NodeManager/NodeDaemon_Impl.h:

          Fixed compilation and linking errors stemming from refactoring
          DnC core to include the Deployment.idl files. Modified the
          include paths as now these are autogenerated from the
          ciao_deployment.mpb file

        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:

          Removed the getApplications () member function the the header
          file. This is not present as a part of the interface. This
          resolves link errors

        * DnC/ExecutionManager/ExecutionManager.mpc:

          Removed the unnecessary ciao_server target from the mpc file as
          this library is not needed

Fri May 28 10:18:45 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Fixed warnings resulting from non usage of .in () while
          assigning to a _ptr from a _var.

        * DnC/DomaiinApplicationManager/DomainApplicationManager_Impl.inl:
        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:

          Created file for storing inline functions

Thu May 27 22:16:26 2004  Tao Lu  <lu@dre.vanderbilt.edu>

        * examples/handcrafted/BasicSP_EC/BMClosedED/BMClosedEDE.idl:
        * examples/handcrafted/BasicSP_EC/BMClosedED/BMClosedED_svnt.cpp:
        * examples/handcrafted/BasicSP_EC/BMClosedED/BMClosedED_svnt.h: