@@ -1,3 +1,15 @@
+Sun May 30 14:36:21 2004  Tao Lu  <lu@dre.vanderbilt.edu>
+
+	* DnC/NodeApplication/NodeApplication.mpc:
+	* DnC/NodeApplication/NodeApplication.cpp:
+	* DnC/Core/Container_Base.h:
+	* DnC/Core/Container_Base.cpp:
+	* DnC/Core/Deployment_Core.idl:
+	* DnC/Core/NodeApplication_Impl.h:
+	* DnC/Core/NodeApplication_Impl.cpp:
+
+	Updateed those files to finish home creation part.
+
 Sat May 29 15:25:22 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
 
         * DnC/RepositoryManager/RepositoryManager_Impl.h:
